src/objects/Supported_Products__c/Supported_Products__c.object-meta.xml
<CustomObject>
    <description>Supported Products Lookup to replace Picklists</description>
    <label>Supported Products</label>
    <nameField>
        <label>Supported Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supported Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>