src/objects/Supported_Products__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>