src/objects/Supported_Products__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supported Products</relationshipLabel>
    <relationshipName>Supported_Products</relationshipName>
    <type>Lookup</type>
</CustomField>