src/objects/Supported_Products__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supported Products (Primary)</relationshipLabel>
    <relationshipName>Supported_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>