src/objects/Supported_Products__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supported Products (Secondary)</relationshipLabel>
    <relationshipName>Supported_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>