src/objects/Supported_Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Catalog_Product_Group__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Comments__c</columns>
    <columns>Status__c</columns>
    <columns>Primary__c</columns>
    <columns>Secondary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>